syntax = "proto3";

package golem.shardmanager;

import "golem/shardmanager/routing_table_entry.proto";

message RoutingTable {
  uint32 number_of_shards = 1;
  repeated RoutingTableEntry shard_assignments = 2;
}
